--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
     "@fortawesome/react-fontawesome": "^0.2.3",
     "@hcaptcha/react-hcaptcha": "^1.12.0",
     "@material-tailwind/react": "^2.1.10",
-    "next": "^15.5.6",
+    "@splidejs/react-splide": "^0.7.12",
+    "next": "16.0.7",
     "next-intl": "^4.4.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.0.1",
+    "react-dom": "^19.0.1",
+    "react-server-dom-webpack": "^19.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.3.4",
+    "eslint-config-next": "^16.0.7",
     "tailwindcss": "^4"
   }
 }
